corpus/basic.txt
=====
Utype
=====

typedef array {
	byte aa[4]
}

---

(source_file
  (utype
    (name)
    (decl_lst
      (one_decl
        (typename)
        (ivar
          (name)
          (number))))))

========
Decl_lst
========

int a = 10;
int b = 2

---

(source_file
  (decl_lst
    (one_decl
      (typename)
      (ivar
        (name)
        (number)))
    (one_decl
      (typename)
      (ivar
        (name)
        (number)))))

========
Ch_init
========

init {
	chan qname = [8] of { mtype, int, chan, byte };
	chan c[3] = [0] of { short }
}

---

(source_file
  (init
    (block
      (decl_lst
        (one_decl
          (typename)
          (ivar
            (name)
            (ch_init
              (number)
              (typename)
              (typename)
              (typename)
              (typename))))
        (one_decl
          (typename)
          (ivar
            (name)
            (number)
            (ch_init
              (number)
              (typename))))))))

====
Name
====

init {
	int b1E_q
}

---

(source_file
  (init
    (block
      (decl_lst
        (one_decl
          (typename)
          (ivar
            (name)))))))

===========
Binary_expr
===========

init {
	int a = 1 * 1 + 2 / 3
}

---

(source_file
  (init
    (block
      (decl_lst
        (one_decl
          (typename)
          (ivar
            (name)
            (binary_expr
              (binary_expr
                (number)
                (number))
              (binary_expr
                (number)
                (number)))))))))

==========
Unary_expr
==========

init {
	int a = -1 < !3
}

---

(source_file
  (init
    (block
      (decl_lst
        (one_decl
          (typename)
          (ivar
            (name)
            (binary_expr
              (unary_expr
                (number))
              (unary_expr
                (number)))))))))

======
String
======

int b = "bloup"
