corpus/meta-terms.txt
========
Comments
========

/* comment */ init /* comment */ {
	int /* an integer */ v /* variable */;
	v /* this / * is * / okay */ ++;
}

---

(source_file
  (comment)
  (init
    (comment)
    (decl_lst
      (one_decl
        (typename)
        (comment)
        (ivar
          (name))))
    (comment)
    (assign
      (varref
        (name))
      (comment))))
